--- a/react-router-4_webpack-2-update/index.html
+++ b/react-router-4_webpack-2-update/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="mainContainer">
     </div>
-    <script src="./bundle.js"></script>
+    <!-- <script src="./bundle.js"></script> -->
+	<script src="/src/bundle.js"></script>
 </body>
 <html>
